--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="description" content="Bienvenido a mi portafolio de Diseño UX/UI y Desarrollo Frontend. Explora mi trabajo y descubre cómo puedo ayudarte a crear experiencias digitales excepcionales.">
+    <meta name="keywords" content="HTML, CSS, META, FIGMA, DESIGNER, DEVELOPER, USER EXPERIENCE, USER INTERFACE, PROTOTYPE, USER CENTERED DESIGN, MODERN DESIGN, BOOSTRAP, SASS, BRAND CREATION, BRANDING, SOLID PROJECT">
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- css -->
@@ -15,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet"> 
-    <title>InfiniteDev</title>
+    <title>Portafolio de Diseño UX/UI y Desarrollo Frontend | Bautista Centorbi</title>
 </head>
 <body>
     <!-- Header -->
@@ -23,7 +25,7 @@
         <!-- Top Navigator -->
         <nav id="nav-father" class="navbar navbar-expand-lg bg-body-tertiary">
             <div id="nav-container" class="container-fluid">
-                <a id="logo" class="navbar-brand" href="./index.html"><img src="./multimedia/img/Icon-negativo.ico" alt="logo"><span>InfiniteDev</span></a>
+                <a id="logo" class="navbar-brand" href="./index.html"><img src="./multimedia/img/Icon-negativo.ico" alt="Logo de InfiniteDev con un símbolo de infinito entrelazado con los símbolos de código angular <>. Este diseño simboliza la creatividad infinita en el desarrollo web y el diseño UX/UI."><span>InfiniteDev</span></a>
                 <button id="drawer-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -57,7 +59,7 @@
         <section class="container-fluid" id="intro">
             <div id="Hero-container" class="row">
                 <div id="img-container" class="col-xl-4 col-lg-2 col-md-12 col-sm-0">
-                    <img  alt="Ilustración descriptiva de un diseñador ux/ui." src="./multimedia/img/ilustracion1.png" width="500" height="auto">
+                    <img class="hero-img" alt="Diseñador UX/UI trabajando en la creación de una interfaz de usuario intuitiva." src="./multimedia/img/ilustracion1.png">
                 </div>
                 <div id="descripciones" class="col-xl-8 col-lg-10 col-md-12 col-sm-12">
                     <div class="brand-name">InfiniteDev</div>
@@ -92,13 +94,13 @@
                 </h2>
                 <div class="row" id="projects-container">
                     <div class="col-lg-4 col-md-12 col-sm-12" id="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/174275747/CAB-app-Redesign"><img src="./multimedia/img/Job-1.png" alt="CAB App Redesign"></a>
+                        <a target="_blank" href="https://www.behance.net/gallery/174275747/CAB-app-Redesign"><img src="./multimedia/img/Job-1.png" alt="Captura de pantalla del proyecto de rediseño de la aplicación móvil CAB App, mostrando una interfaz de usuario moderna y fácil de usar."></a>
                     </div>  
                     <div class="col-lg-4 col-md-12 col-sm-12" id="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/162363743/WayToGo-UXUI-Design"><img src="./multimedia/img/Job-2.png" alt="WayToGo UX/UI Design"></a>
+                        <a target="_blank" href="https://www.behance.net/gallery/162363743/WayToGo-UXUI-Design"><img src="./multimedia/img/Job-2.png" alt="Captura de pantalla del proyecto de creación de una aplicación móvil, WayToGo, visualizando la pantalla principal de la aplicaciñon, demostrando accesibilidad, minimalismo y facilidad de uso"></a>
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12" id="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/155638875/Caffe-Brand-Design"><img src="./multimedia/img/Job-3.png" alt="Caffè Branding"></a>
+                        <a target="_blank" href="https://www.behance.net/gallery/155638875/Caffe-Brand-Design"><img src="./multimedia/img/Job-3.png" alt="Imagen de la marca del hogar de café Caffè, que representa un diseño innovador y acogedor."></a>
                     </div>
                 </div>
             </div>
