--- a/pages/about.html
+++ b/pages/about.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="description" content="Conoce más sobre mí, Bautista Centorbi, diseñador UX/UI y desarrollador frontend apasionado por la creación de interfaces intuitivas y hermosos diseños web.">
+    <meta name="keywords" content="HTML, CSS, META, FIGMA, DESIGNER, DEVELOPER, USER EXPERIENCE, USER INTERFACE, PROTOTYPE, USER CENTERED DESIGN, MODERN DESIGN, BOOSTRAP, SASS, BRAND CREATION, BRANDING, SOLID PROJECT">
+    <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,14 +16,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet"> 
-    <title>Sobre Mí - InfiniteDev</title>
+    <title>Conoce a Bautista Centorbi | Diseñador UX/UI y Desarrollador Frontend</title>
 </head>
     <!-- Header -->
     <header>
     <!-- Top Navigator -->
         <nav id="nav-father" class="navbar navbar-expand-lg bg-body-tertiary">
             <div id="nav-container" class="container-fluid">
-            <a id="logo" class="navbar-brand" href="./index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="logo"></a>
+            <a id="logo" class="navbar-brand" href="./index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="Logo de InfiniteDev con un símbolo de infinito entrelazado con los símbolos de código angular <>. Este diseño simboliza la creatividad infinita en el desarrollo web y el diseño UX/UI."></a>
                 <button id="drawer-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -50,7 +53,7 @@
         <div class="container-fluid" id="about">
             <div class="row">
                 <div class="col-xl-4 col-lg-2 col-md-0 col-sm-0" id="img-container">
-                    <img  alt="Logo de InfiniteDev" src="../multimedia/img/Logo Negativo.png" width="500" height="auto">
+                    <img  alt="Logo de InfiniteDev" src="../multimedia/img/Logo Negativo.png">
                 </div>
                 <div class="col-xl-8 col-lg-10 col-md-12 col-sm-12" id="descripciones-about">
                     <h1>
@@ -103,61 +106,61 @@
                 <article class="row" id="educacion">
                     <div class="col-12" id="psp-illustrator">
                         <div class="left-education">
-                            <h4 class="education-info">
+                            <h3 class="education-info">
                                 <span>Coderhouse</span><br>
                                 Curso de Photoshop & Illustrator<br>
                                 <em>Top 10 alumnos de la cursada </em><br>
-                            </h4>
+                            </h3>
                         </div>
                         <div class="right-education">
-                            <h4>
+                            <h3>
                                 2022-2022
-                            </h4>
+                            </h3>
                             <a target="_blank" href="../multimedia/img/Photoshop Illustrator.png">Ver Certificado</a>
                         </div>
                     </div>
                     <div class="col-12" id="uxui">
                         <div class="left-education">
-                            <h4>
+                            <h3>
                                 <span>Coderhouse</span><br>
                                 Curso de Diseño UX/UI Básico<br>
                                 <em>Creación de una app de gestión de ciudadanías.</em><br>
-                            </h4>
+                            </h3>
                         </div>
                         <div class="right-education">
-                            <h4>
+                            <h3>
                                 2022-2023
-                            </h4>
+                            </h3>
                             <a target="_blank" href="../multimedia/img/Diseño UXUI Básico.png">Ver Certificado</a>
                         </div>
                     </div>
                     <div class="col-12" id="uxui-avanzado">
                         <div class="left-education">
-                            <h4>
+                            <h3>
                                 <span>Coderhouse</span><br>
                                 Curso de Diseño UX/UI Avanzado<br>
                                 <em>Rediseño de CAB, app de la Confederación Argentina de Básquet</em><br>
-                            </h4>
+                            </h3>
                         </div>
                         <div class="right-education">
-                            <h4>
+                            <h3>
                                 2023-2023
-                            </h4>
+                            </h3>
                             <a target="_blank" href="../multimedia/img/Diseño UXUI Avanzado.png">Ver Certificado</a>
                         </div>
                     </div>
                     <div class="col-12" id="webd">
                         <div class="left-education">
-                            <h4>
+                            <h3>
                                 <span>Coderhouse</span><br>
                                 Curso de Desarrollo Web<br>
                                 <em>En curso</em> <br>
-                            </h4>
+                            </h3>
                         </div>
                         <div class="right-education">
-                            <h4>
+                            <h3>
                                 2023-En Curso
-                            </h4>
+                            </h3>
                             <a target="_blank" href="">Certificado no disponible</a>
                         </div>
                     </div>
