--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="description" content="¡Hablemos! Ponte en contacto conmigo, Bautista Centorbi, para discutir oportunidades de colaboración, proyectos web emocionantes o cualquier consulta relacionada con diseño y desarrollo">
+    <meta name="keywords" content="HTML, CSS, META, FIGMA, DESIGNER, DEVELOPER, USER EXPERIENCE, USER INTERFACE, PROTOTYPE, USER CENTERED DESIGN, MODERN DESIGN, BOOSTRAP, SASS, BRAND CREATION, BRANDING, SOLID PROJECT">
+    <!-- boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet"> 
-    <title>Contacto - InfiniteDev</title>
+    <title>Contacta con Bautista Centorbi | Diseñador UX/UI y Desarrollador Frontend</title>
 </head>
 <body>
     <!-- Header -->
@@ -21,7 +24,7 @@
         <!-- Top Navigator -->
             <nav id="nav-father" class="navbar navbar-expand-lg bg-body-tertiary">
                 <div id="nav-container" class="container-fluid">
-                <a id="logo" class="navbar-brand" href="./index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="logo"></a>
+                <a id="logo" class="navbar-brand" href="./index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="Logo de InfiniteDev con un símbolo de infinito entrelazado con los símbolos de código angular <>. Este diseño simboliza la creatividad infinita en el desarrollo web y el diseño UX/UI."></a>
                     <button id="drawer-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -47,11 +50,12 @@
                 </div>
             </nav>
         </header>
+    <!-- Main -->
     <main class="main-contact">
-        <div class="contacto-container">    
-            <h2>¿Qué deseas que haga?</h2>
-            <div class="buttons-container">
-                <div class="checkbox">
+        <div class="container-fluid" id="contacto-container">    
+            <h1>¿Qué deseas que haga?</h1>
+            <div class="row" id="buttons-container">
+                <div class="col-12" id="checkbox">
                     <ul>
                         <li><input type="checkbox" name="ux-btn" id="ux-btn"><label for="ux-btn">UX Design</label></li>
                         <li><input type="checkbox" name="graphic-btn" id="graphic-btn"><label for="graphic-btn">Graphic Design</label></li>
