--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="description" content="Descubre mis habilidades en diseño UX/UI y desarrollo frontend. Conoce cómo puedo llevar tus proyectos web al siguiente nivel con experiencia y creatividad.">
+    <meta name="keywords" content="HTML, CSS, META, FIGMA, DESIGNER, DEVELOPER, USER EXPERIENCE, USER INTERFACE, PROTOTYPE, USER CENTERED DESIGN, MODERN DESIGN, BOOSTRAP, SASS, BRAND CREATION, BRANDING, SOLID PROJECT">
+    <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet"> 
-    <title>Servicios - InfiniteDev</title>
+    <title>Habilidades en Diseño UX/UI y Desarrollo Frontend | Bautista Centorbi</title>
 </head>
 <body>
     <!-- Header -->
@@ -22,7 +25,7 @@
         <!-- Top Navigator -->
             <nav id="nav-father" class="navbar navbar-expand-lg bg-body-tertiary">
                 <div id="nav-container" class="container-fluid">
-                <a id="logo" class="navbar-brand" href="./index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="logo"></a>
+                <a id="logo" class="navbar-brand" href="./index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="Logo de InfiniteDev con un símbolo de infinito entrelazado con los símbolos de código angular <>. Este diseño simboliza la creatividad infinita en el desarrollo web y el diseño UX/UI."></a>
                     <button id="drawer-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -51,8 +54,8 @@
     <main class="about-main">
         <div class="skill-container">
             <section class="habilidades">
-                <h2>¿Qué es lo que hago?</h2>
-                <h4>Soy de Argentina, diseñador UX/UI Jr. En la actualidad me encuentro cursando la carrera de Desarrollo Web en Coderhouse. Estas son las tecnologías que manejo con mayor frecuencia.</h4>
+                <h1>¿Qué es lo que hago?</h1>
+                <p>Soy de Argentina, diseñador UX/UI Jr. En la actualidad me encuentro cursando la carrera de Desarrollo Web en Coderhouse. Estas son las tecnologías que manejo con mayor frecuencia.</p>
                 <ul class="habilidades-ul">
                     <li><i class="fab fa-figma"></i>Figma</li>
                     <li><i class="fab fa-html5"></i>HTML</li>
