--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="description" content=""Explora mi portafolio de Diseño UX/UI y Desarrollo Frontend, donde presento proyectos destacados que reflejan mi experiencia y creatividad. Descubre cómo puedo ayudarte a transformar tus ideas en experiencias digitales excepcionales.">
+    <meta name="keywords" content="HTML, CSS, META, FIGMA, DESIGNER, DEVELOPER, USER EXPERIENCE, USER INTERFACE, PROTOTYPE, USER CENTERED DESIGN, MODERN DESIGN, BOOSTRAP, SASS, BRAND CREATION, BRANDING, SOLID PROJECT">
+    <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet"> 
-    <title>Portfolio - InfiniteDev</title>
+    <title>Portafolio de Diseño UX/UI y Desarrollo Frontend | Bautista Centorbi</title>
 </head>
 <body>
     <!-- Header -->
@@ -21,7 +24,7 @@
         <!-- Top Navigator -->
             <nav id="nav-father" class="navbar navbar-expand-lg bg-body-tertiary">
                 <div id="nav-container" class="container-fluid">
-                <a id="logo" class="navbar-brand" href="./index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="logo"></a>
+                <a id="logo" class="navbar-brand" href="./index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="Logo de InfiniteDev con un símbolo de infinito entrelazado con los símbolos de código angular <>. Este diseño simboliza la creatividad infinita en el desarrollo web y el diseño UX/UI."></a>
                     <button id="drawer-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -50,34 +53,34 @@
     <main class="main-portfolio">
         <section class="last-project">
             <article class="last-project-container">
-                <h2>
+                <h1>
                     Proyecto más 
                     <span>reciente</span>
-                </h2>
+                </h1>
                 <div class="project-iframe">
                     <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="700px" height="548px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fx0ONaMjk8kqo9aPNWt7Xwi%2FBautista-Centorbi-%252B-PF-%252B-Plan-de-marketing-digital%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D37-902%26viewport%3D0%252C0%252C1%26t%3DpkKDJ0TSmXCRg44j-1%26scaling%3Dmin-zoom%26starting-point-node-id%3D37%253A902%26mode%3Ddesign" allowfullscreen></iframe>
                 </div>
             </article>
         </section>
-        <section class="projects">
-            <article class="projects-info-container">
+        <section class="container" id="projects">
+            <div class="row" id="projects-info-container">
                 <h2>
                     Algunos de mis 
                     <span>trabajos</span>
                     <i class="fa-solid fa-arrow-turn-down"></i>
                 </h2>
-                <div class="projects-container">
-                    <div class="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/174275747/CAB-app-Redesign"><img  width="380px" src="../multimedia/img/Job-1.png" alt=""><div>CAB app Redesign</div></a>
+                <div class="row" id="projects-container">
+                    <div class="col-lg-4 col-md-12 col-sm-12" id="a-link-projects">
+                        <a target="_blank" href="https://www.behance.net/gallery/174275747/CAB-app-Redesign"><img src="../multimedia/img/Job-1.png" alt="CAB App Redesign"></a>
+                    </div>  
+                    <div class="col-lg-4 col-md-12 col-sm-12" id="a-link-projects">
+                        <a target="_blank" href="https://www.behance.net/gallery/162363743/WayToGo-UXUI-Design"><img src="../multimedia/img/Job-2.png" alt="WayToGo UX/UI Design"></a>
                     </div>
-                    <div class="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/162363743/WayToGo-UXUI-Design"><img  width="380px" src="../multimedia/img/Job-2.png" alt=""><div>WayToGo app</div></a>
-                    </div>
-                    <div class="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/155638875/Caffe-Brand-Design"><img  width="380px" src="../multimedia/img/Job-3.png" alt=""><div>Caffè Brand Design</div></a>
+                    <div class="col-lg-4 col-md-12 col-sm-12" id="a-link-projects">
+                        <a target="_blank" href="https://www.behance.net/gallery/155638875/Caffe-Brand-Design"><img src="../multimedia/img/Job-3.png" alt="Caffè Branding"></a>
                     </div>
                 </div>
-            </article>
+            </div>
         </section>
     </main>
     
